# shoppinglist

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  main.qml  model.cpp  model.h  qtquickcontrols2.conf  singleton.cpp  singleton.h
android/: AndroidManifest.xml
ios/: Info.plist
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
